@@ -22,9 +22,9 @@ import io.ballerina.persist.BalException;
 import io.ballerina.persist.PersistToolsConstants;
 import io.ballerina.persist.models.Entity;
 import io.ballerina.persist.models.EntityField;
-import io.ballerina.persist.models.FieldMetadata;
 import io.ballerina.persist.models.ForeignKey;
 import io.ballerina.persist.models.Module;
+import io.ballerina.persist.models.Relation;
 import io.ballerina.persist.nodegenerator.SourceGenerator;
 import io.ballerina.persist.nodegenerator.syntax.constants.BalSyntaxConstants;
 import io.ballerina.persist.nodegenerator.syntax.utils.SqlScriptUtils;
@@ -48,10 +48,12 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Stream;
 
 /**
@@ -157,7 +159,7 @@ public class Migrate implements BLauncherCmd {
                     return;
                 }
 
-                Module model = null;
+                Module model;
                 try {
                     model = BalProjectUtils.getEntities(schemaFilePath);
                 } catch (BalException e) {
@@ -197,11 +199,11 @@ public class Migrate implements BLauncherCmd {
                     errStream.println("[Entity " + String.join(", ", model.getEntityMap().keySet())
                             + " has been added]" + System.lineSeparator());
                     errStream.println(
-                            "Generated migration script to " + relativePath.toString() + 
+                            "Generated migration script to " + relativePath +
                             " directory." + System.lineSeparator());
                     errStream.println("Next steps:" + System.lineSeparator() + 
                             "Execute the \"script.sql\" file located at " +
-                            relativePath.toString() +
+                            relativePath +
                             " directory in your database to migrate the schema with the latest changes.");
                 } else {
                     errStream.println("ERROR: Could not find any entities in the schema file");
@@ -224,7 +226,7 @@ public class Migrate implements BLauncherCmd {
             try (Stream<Path> directoryStream = Files.list(folderPath)) {
                 List<Path> directories = directoryStream
                         .filter(Files::isDirectory)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 for (Path directory : directories) {
                     Path fileName = directory.getFileName();
@@ -331,10 +333,10 @@ public class Migrate implements BLauncherCmd {
                 Path relativePath = Paths.get("").toAbsolutePath().relativize(newMigrationPath);
 
                 errStream.println(
-                        "Generated migration script to " + relativePath.toString() + 
+                        "Generated migration script to " + relativePath +
                         " directory." + System.lineSeparator());
                 errStream.println("Next steps:" + System.lineSeparator() + "Execute the \"script.sql\" file located at "
-                        + relativePath.toString() +
+                        + relativePath +
                         " directory in your database to migrate the schema with the latest changes.");
             }
 
@@ -349,7 +351,6 @@ public class Migrate implements BLauncherCmd {
                 Files.copy(currentModelPath, newMigrationPath.resolve(currentModelPath.getFileName()));
             } catch (IOException e) {
                 errStream.println("Error: Copying file failed: " + e.getMessage());
-                return;
             }
         } else {
             // Delete the newMigrateDirectory
@@ -368,7 +369,6 @@ public class Migrate implements BLauncherCmd {
                         Files.delete(migrationsDir.toPath());
                     } catch (IOException e) {
                         errStream.println("Error: Failed to delete migration folder: " + e.getMessage());
-                        return;
                     }
                 }
             }
@@ -381,9 +381,7 @@ public class Migrate implements BLauncherCmd {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMddHHmmss");
         String timestamp = formatter.format(ZonedDateTime.ofInstant(currentTime, ZoneOffset.UTC));
 
-        String newMigration = migrationsDir + File.separator + timestamp + "_" + migrationName;
-
-        return newMigration;
+        return migrationsDir + File.separator + timestamp + "_" + migrationName;
     }
 
     // Create the timestamp directory
@@ -420,13 +418,12 @@ public class Migrate implements BLauncherCmd {
 
         List<String> addedEntities = new ArrayList<>();
         List<String> removedEntities = new ArrayList<>();
-        HashMap<String, List<FieldMetadata>> addedFields = new HashMap<>();
+        HashMap<String, List<EntityField>> addedFields = new HashMap<>();
         HashMap<String, List<String>> removedFields = new HashMap<>();
-        HashMap<String, List<FieldMetadata>> changedFieldTypes = new HashMap<>();
-        HashMap<String, List<FieldMetadata>> addedReadOnly = new HashMap<>();
-        HashMap<String, List<String>> removedReadOnly = new HashMap<>();
+        HashMap<String, List<EntityField>> changedFieldTypes = new HashMap<>();
+        Set<String> primaryKeyChangedEntities = new HashSet<>();
         HashMap<String, List<ForeignKey>> addedForeignKeys = new HashMap<>();
-        HashMap<String, List<String>> removedForeignKeys = new HashMap<>();
+        HashMap<String, List<ForeignKey>> removedForeignKeys = new HashMap<>();
 
         // Compare entities in previousModel and currentModel
         for (Entity previousModelEntity : previousModel.getEntityMap().values()) {
@@ -434,81 +431,82 @@ public class Migrate implements BLauncherCmd {
 
             // Check if currentModelEntity exists
             if (currentModelEntity == null) {
-                differences.add("Entity " + previousModelEntity.getEntityName() + " has been removed");
-                removedEntities.add(previousModelEntity.getEntityName());
+                differences.add("Table " + previousModelEntity.getTableName() + " has been removed");
+                removedEntities.add(previousModelEntity.getTableName());
                 continue;
+            }
+
+            // Check if the primary key fields has been removed
+            if (previousModelEntity.getKeys().size() > currentModelEntity.getKeys().size()) {
+                differences.add("Primary key of table " + currentModelEntity.getTableName() + " has changed");
+                primaryKeyChangedEntities.add(currentModelEntity.getTableName());
             }
 
             // Compare fields in previousModelEntity and currentModelEntity
             for (EntityField previousModelField : previousModelEntity.getFields()) {
-                EntityField currentModelField = currentModelEntity.getFieldByName(previousModelField.getFieldName());
+                EntityField currentModelField = currentModelEntity
+                        .getFieldByColumnName(previousModelField.getFieldColumnName());
 
                 // Check if currentModelField exists and if foreign key was removed
                 if (currentModelField == null) {
                     if (previousModelField.getRelation() == null) {
-                        differences.add("Field " + previousModelField.getFieldName() +
-                                " has been removed from entity " + previousModelEntity.getEntityName());
-                        addToMapNoTypeString(previousModelEntity, previousModelField, removedFields);
+                        differences.add("Column " + previousModelField.getFieldColumnName() +
+                                " has been removed from table " + previousModelEntity.getTableName());
+                        removeField(previousModelEntity, previousModelField, removedFields);
                     } else if (previousModelField.getRelation().isOwner()) {
-                        differences.add("Foreign key " + previousModelField.getFieldName() +
-                                " has been removed from entity " + previousModelEntity.getEntityName());
-                        addToMapRemoveForeignKey(previousModelEntity, previousModelField, removedForeignKeys);
+                        differences.add("Foreign key " + previousModelField.getFieldColumnName() +
+                                " has been removed from table " + previousModelEntity.getTableName());
+                        addOrRemoveForeignKey(previousModelEntity, previousModelField, removedForeignKeys);
                     }
                     continue;
                 }
 
                 // Compare data types
-                if (!previousModelField.getFieldType().equals(currentModelField.getFieldType())) {
-                    differences.add("Data type of field " + previousModelField.getFieldName() +
-                            " in entity " + previousModelEntity.getEntityName() + " has changed from " +
-                            previousModelField.getFieldType() + " to " + currentModelField.getFieldType());
-                    addToMapWithType(previousModelEntity, currentModelField, changedFieldTypes);
+                if (!previousModelField.getFieldType().equals(currentModelField.getFieldType()) ||
+                        !Objects.equals(previousModelField.getSqlType(), currentModelField.getSqlType()) ||
+                        !Objects.equals(previousModelField.isOptionalType(), currentModelField.isOptionalType())
+                ) {
+                    differences.add("Data type of column " + previousModelField.getFieldColumnName() +
+                            " in table " + previousModelEntity.getTableName() + " has changed to " +
+                            currentModelField.getFieldType() + (currentModelField.getSqlType() != null ?
+                            " " +  currentModelField.getSqlType().getFullDataType() : "") + " and is now " +
+                            (currentModelField.isOptionalType() ? "nullable" : "not nullable"));
+
+                    addOrModifyField(previousModelEntity, currentModelField, changedFieldTypes);
                 }
 
                 // Compare readonly fields
-                if (previousModelEntity.getKeys().contains(previousModelField)
-                        && !currentModelEntity.getKeys().contains(currentModelField)) {
-                    differences.add("Field " + previousModelField.getFieldName() + " in entity " +
-                            previousModelEntity.getEntityName() + " is no longer a readonly field");
-                    addToMapNoTypeString(previousModelEntity, previousModelField, removedReadOnly);
-
-                } else if (!previousModelEntity.getKeys().contains(previousModelField)
+                if (!previousModelEntity.getKeys().contains(previousModelField)
                         && currentModelEntity.getKeys().contains(currentModelField)) {
-                    differences.add("Field " + previousModelField.getFieldName() + " in entity " +
-                            previousModelEntity.getEntityName() + " is now a readonly field");
-                    addToMapNoTypeObject(previousModelEntity, currentModelField, addedReadOnly);
+                    differences.add("Primary key of table " + currentModelEntity.getTableName() + " has changed");
+                    differences.add("Column " + previousModelField.getFieldColumnName() + " in table " +
+                            previousModelEntity.getTableName() + " is now a primary key");
+                    primaryKeyChangedEntities.add(previousModelEntity.getTableName());
                 }
 
             }
 
             // Check for added fields and for added foreign keys
             for (EntityField currentModelField : currentModelEntity.getFields()) {
-                EntityField previousModelField = previousModelEntity.getFieldByName(currentModelField.getFieldName());
+                EntityField previousModelField = previousModelEntity
+                        .getFieldByColumnName(currentModelField.getFieldColumnName());
 
                 if (previousModelField == null) {
                     if (currentModelField.getRelation() == null) {
                         if (currentModelEntity.getKeys().contains(currentModelField)) {
-                            differences.add("Field " + currentModelField.getFieldName() + " of type " +
-                                    currentModelField.getFieldType() + " has been added to entity " +
-                                    currentModelEntity.getEntityName() + " as a readonly field");
-                            addToMapNoTypeObject(currentModelEntity, currentModelField, addedReadOnly);
+                            differences.add("Column " + currentModelField.getFieldColumnName() + " of type " +
+                                    currentModelField.getFieldType() + " has been added to table " +
+                                    currentModelEntity.getTableName() + " as a primary key");
+                            primaryKeyChangedEntities.add(currentModelEntity.getTableName());
                         } else {
-                            differences.add("Field " + currentModelField.getFieldName() + " of type " +
-                                    currentModelField.getFieldType() + " has been added to entity " +
-                                    currentModelEntity.getEntityName());
+                            differences.add("Column " + currentModelField.getFieldColumnName() + " of type " +
+                                    currentModelField.getFieldType() + " has been added to table " +
+                                    currentModelEntity.getTableName());
                         }
-                        addToMapWithType(currentModelEntity, currentModelField, addedFields);
+                        addOrModifyField(currentModelEntity, currentModelField, addedFields);
                     } else if (currentModelField.getRelation().isOwner()) {
-                        differences.add("Field " + currentModelField.getRelation().getKeyColumns().get(0).getField() +
-                                " of type " + currentModelField.getRelation().getKeyColumns().get(0).getType() +
-                                " has been added to entity " + currentModelEntity.getEntityName()
-                                + " as a foreign key");
-                        addToMapNewEntityFK(currentModelEntity, currentModelField, addedFields);
-
-                        differences.add("Foreign key " + currentModelField.getFieldName() + " of type " +
-                                currentModelField.getFieldType() + " has been added to entity " +
-                                currentModelEntity.getEntityName());
-                        addToMapAddForeignKey(currentModelEntity, currentModelField, addedForeignKeys);
+                        createForeignKeys(currentModelField, differences, currentModelEntity, addedFields,
+                                addedForeignKeys);
                     }
                 }
             }
@@ -516,360 +514,250 @@ public class Migrate implements BLauncherCmd {
 
         // Check for added entities
         for (Entity currentModelEntity : currentModel.getEntityMap().values()) {
-            Entity previousModelEntity = previousModel.getEntityMap().get(currentModelEntity.getEntityName());
-
+            Entity previousModelEntity = previousModel.getEntityMap().get(currentModelEntity.getTableName());
             if (previousModelEntity == null) {
-                differences.add("Entity " + currentModelEntity.getEntityName() + " has been added");
-                addedEntities.add(currentModelEntity.getEntityName());
-                for (EntityField field : currentModelEntity.getFields()) {
-                    if (field.getRelation() == null) {
-                        if (currentModelEntity.getKeys().contains(field)) {
-                            differences.add("Field " + field.getFieldName() + " of type " +
-                                    field.getFieldType() + " has been added to entity " +
-                                    currentModelEntity.getEntityName() + " as a readonly field");
-                            addToMapWithType(currentModelEntity, field, addedReadOnly);
-
-                        } else {
-                            differences.add("Field " + field.getFieldName() + " of type " +
-                                    field.getFieldType() + " has been added to entity " +
-                                    currentModelEntity.getEntityName());
-                            addToMapWithType(currentModelEntity, field, addedFields);
-                        }
-                    } else if (field.getRelation().isOwner()) {
-                        differences.add("Field " + field.getRelation().getKeyColumns().get(0).getField() +
-                                " of type " + field.getRelation().getKeyColumns().get(0).getType() +
-                                " has been added to entity " + currentModelEntity.getEntityName()
-                                + " as a foreign key");
-                        addToMapNewEntityFK(currentModelEntity, field, addedFields);
-
-                        differences.add("Foreign key " + field.getFieldName() + " of type " +
-                                field.getFieldType() + " has been added to entity "
-                                + currentModelEntity.getEntityName());
-                        addToMapAddForeignKey(currentModelEntity, field, addedForeignKeys);
-                    }
-                }
+                differences.add("Table " + currentModelEntity.getTableName() + " has been added");
+                addedEntities.add(currentModelEntity.getTableName());
             }
         }
 
         // Convert differences to queries (ordered)
-        convertCreateTableToQuery(QueryTypes.ADD_TABLE, addedEntities, queries, addedReadOnly, addedFields);
-        convertMapToQuery(QueryTypes.ADD_FIELD, addedFields, queries, addedEntities);
-        convertMapListToQuery(QueryTypes.REMOVE_FOREIGN_KEY, removedForeignKeys, queries);
-        convertMapListToQuery(QueryTypes.REMOVE_READONLY, removedReadOnly, queries);
-        convertMapToQuery(QueryTypes.ADD_READONLY, addedReadOnly, queries, addedEntities);
-        convertFKMapToQuery(QueryTypes.ADD_FOREIGN_KEY, addedForeignKeys, queries);
-        convertMapListToQuery(QueryTypes.REMOVE_FIELD, removedFields, queries);
-        convertListToQuery(QueryTypes.REMOVE_TABLE, removedEntities, queries);
-        convertMapToQuery(QueryTypes.CHANGE_TYPE, changedFieldTypes, queries, addedEntities);
+        addDropPrimaryKeyQueries(primaryKeyChangedEntities, addedEntities, queries);
+        addCreateTableQueries(addedEntities, currentModel, queries);
+        addCreateFieldQueries(addedFields, queries);
+        addCreatePrimaryKeyQueries(primaryKeyChangedEntities, addedEntities, currentModel, queries);
+        addDropForeignKeyQueries(removedForeignKeys, queries);
+        addCreateForeignKeyQueries(addedForeignKeys, queries);
+        addDropColumnQueries(removedFields, queries);
+        addDropTableQueries(removedEntities, queries);
+        addModifyColumnTypeQueries(changedFieldTypes, queries);
 
         errStream.println(System.lineSeparator() + "Detailed list of differences: ");
         if (!differences.isEmpty()) {
-            errStream.println(differences + System.lineSeparator());
+            differences.forEach(difference -> errStream.println("-- " + difference));
+            errStream.println();
         } else {
-            errStream.println("[No differences found]" + System.lineSeparator());
+            errStream.println("-- No differences found" + System.lineSeparator());
         }
 
         return queries;
     }
 
-    private static void addToMapAddForeignKey(Entity entity, EntityField field, Map<String, List<ForeignKey>> map) {
-        String addKeyName = String.format("FK_%s_%s", entity.getEntityName(),
-                field.getRelation().getAssocEntity().getEntityName());
-        ForeignKey foreignKey = new ForeignKey(addKeyName, field.getRelation().getKeyColumns().get(0).getField(),
-                field.getRelation().getAssocEntity().getEntityName(),
-                field.getRelation().getKeyColumns().get(0).getReference());
+    private static void createForeignKeys(EntityField currentModelField, List<String> differences,
+                                          Entity currentModelEntity, HashMap<String, List<EntityField>> addedFields,
+                                          HashMap<String, List<ForeignKey>> addedForeignKeys) {
+        for (Relation.Key key : currentModelField.getRelation().getKeyColumns()) {
+            differences.add("Column " + key.getColumnName() + " of type " + key.getType() +
+                    " has been added to table " + currentModelEntity.getTableName()
+                    + " as a foreign key");
+        }
 
-        if (!map.containsKey(entity.getEntityName())) {
+        addNewEntityFK(currentModelEntity, currentModelField, addedFields);
+
+        differences.add("Relation " + currentModelField.getFieldName() + " of type " +
+                currentModelField.getFieldType() + " has been added to table " +
+                currentModelEntity.getTableName());
+        addOrRemoveForeignKey(currentModelEntity, currentModelField, addedForeignKeys);
+    }
+
+    private static void addCreatePrimaryKeyQueries(Set<String> entities, List<String> addedEntities,
+                                                   Module currentModel, List<String> queries) {
+        String addPrimaryKeyQuery = "ALTER TABLE %s%nADD PRIMARY KEY (%s);%n";
+        for (String tableName : entities) {
+            if (addedEntities.contains(tableName)) {
+                continue;
+            }
+            Optional<Entity> entity = currentModel.getEntityByTableName(tableName);
+            entity.ifPresent(value ->
+                    queries.add(String.format(addPrimaryKeyQuery, tableName, value.getKeys().stream().map(
+                    EntityField::getFieldColumnName).reduce((a, b) -> a + ", " + b).orElse(""))));
+        }
+    }
+
+    private static void addDropPrimaryKeyQueries(Set<String> changedPrimary, List<String> addedEntities,
+                                                 List<String> queries) {
+        if (changedPrimary.isEmpty()) {
+            return;
+        }
+        String dropPrimaryKeyTemplate = "ALTER TABLE %s%nDROP PRIMARY KEY;%n";
+        changedPrimary.forEach(table -> {
+            if (!addedEntities.contains(table)) {
+                queries.add(String.format(dropPrimaryKeyTemplate, table));
+            }
+        });
+    }
+
+    private static void addOrRemoveForeignKey(Entity entity, EntityField field, Map<String, List<ForeignKey>> map) {
+        String removeKeyName = String.format("FK_%s_%s", entity.getTableName(),
+                field.getRelation().getAssocEntity().getTableName());
+        ForeignKey foreignKey = new ForeignKey(removeKeyName,
+                field.getRelation().getKeyColumns().stream().map(Relation.Key::getColumnName).toList(),
+                field.getRelation().getAssocEntity().getTableName(),
+                field.getRelation().getKeyColumns().stream().map(Relation.Key::getReferenceColumnName).toList());
+
+        if (!map.containsKey(entity.getTableName())) {
             List<ForeignKey> initialData = new ArrayList<>();
             initialData.add(foreignKey);
-            map.put(entity.getEntityName(), initialData);
+            map.put(entity.getTableName(), initialData);
         } else {
-            List<ForeignKey> existingData = map.get(entity.getEntityName());
+            List<ForeignKey> existingData = map.get(entity.getTableName());
             existingData.add(foreignKey);
-            map.put(entity.getEntityName(), existingData);
+            map.put(entity.getTableName(), existingData);
         }
     }
 
-    private static void addToMapRemoveForeignKey(Entity entity, EntityField field, Map<String, List<String>> map) {
-        String removeKeyName = String.format("FK_%s_%s", entity.getEntityName(),
-                field.getRelation().getAssocEntity().getEntityName());
-
-        if (!map.containsKey(entity.getEntityName())) {
+    private static void removeField(Entity entity, EntityField field, Map<String, List<String>> map) {
+        if (!map.containsKey(entity.getTableName())) {
             List<String> initialData = new ArrayList<>();
-            initialData.add(removeKeyName);
-            map.put(entity.getEntityName(), initialData);
+            initialData.add(field.getFieldColumnName());
+            map.put(entity.getTableName(), initialData);
         } else {
-            List<String> existingData = map.get(entity.getEntityName());
-            existingData.add(removeKeyName);
-            map.put(entity.getEntityName(), existingData);
+            List<String> existingData = map.get(entity.getTableName());
+            existingData.add(field.getFieldColumnName());
+            map.put(entity.getTableName(), existingData);
         }
     }
 
-    private static void addToMapNoTypeString(Entity entity, EntityField field, Map<String, List<String>> map) {
-        if (!map.containsKey(entity.getEntityName())) {
-            List<String> initialData = new ArrayList<>();
-            initialData.add(field.getFieldName());
-            map.put(entity.getEntityName(), initialData);
+    private static void addOrModifyField(Entity entity, EntityField field, Map<String, List<EntityField>> map) {
+        if (!map.containsKey(entity.getTableName())) {
+            List<EntityField> initialData = new ArrayList<>();
+            initialData.add(field);
+            map.put(entity.getTableName(), initialData);
         } else {
-            List<String> existingData = map.get(entity.getEntityName());
-            existingData.add(field.getFieldName());
-            map.put(entity.getEntityName(), existingData);
+            List<EntityField> existingData = map.get(entity.getTableName());
+            existingData.add(field);
+            map.put(entity.getTableName(), existingData);
         }
     }
 
-    private static void addToMapNoTypeObject(Entity entity, EntityField field, Map<String, List<FieldMetadata>> map) {
-        FieldMetadata fieldMetadata = new FieldMetadata(field.getFieldName(), field.getSqlType());
+    private static void addNewEntityFK(Entity entity, EntityField field, Map<String, List<EntityField>> map) {
+        for (Relation.Key key : field.getRelation().getKeyColumns()) {
+            EntityField primaryKey = field.getRelation().getAssocEntity()
+                    .getFieldByColumnName(key.getReferenceColumnName());
+            EntityField.Builder customFkBuilder = EntityField.newBuilder(key.getField());
+            customFkBuilder.setFieldColumnName(key.getColumnName());
+            customFkBuilder.setType(primaryKey.getFieldType());
+            customFkBuilder.setArrayType(false);
+            customFkBuilder.setSqlType(primaryKey.getSqlType());
 
-        if (!map.containsKey(entity.getEntityName())) {
-            List<FieldMetadata> initialData = new ArrayList<>();
-            initialData.add(fieldMetadata);
-            map.put(entity.getEntityName(), initialData);
-        } else {
-            List<FieldMetadata> existingData = map.get(entity.getEntityName());
-            existingData.add(fieldMetadata);
-            map.put(entity.getEntityName(), existingData);
-        }
-    }
-
-    private static void addToMapWithType(Entity entity, EntityField field, Map<String, List<FieldMetadata>> map) {
-        FieldMetadata fieldMetadata = new FieldMetadata(field.getFieldName(), field.getFieldType(),
-                field.isArrayType(), field.getSqlType());
-
-        if (!map.containsKey(entity.getEntityName())) {
-            List<FieldMetadata> initialData = new ArrayList<>();
-            initialData.add(fieldMetadata);
-            map.put(entity.getEntityName(), initialData);
-        } else {
-            List<FieldMetadata> existingData = map.get(entity.getEntityName());
-            existingData.add(fieldMetadata);
-            map.put(entity.getEntityName(), existingData);
-        }
-    }
-
-    private static void addToMapNewEntityFK(Entity entity, EntityField field, Map<String, List<FieldMetadata>> map) {
-        EntityField customFk = entity.getFieldByName(field.getRelation().getKeyColumns().get(0).getField());
-        FieldMetadata fieldMetadata = new FieldMetadata(field.getRelation().getKeyColumns().get(0).getField(),
-                    field.getRelation().getKeyColumns().get(0).getType(), field.isArrayType(),
-                    customFk == null ? null : customFk.getSqlType());
-
-        if (!map.containsKey(entity.getEntityName())) {
-            List<FieldMetadata> initialData = new ArrayList<>();
-            initialData.add(fieldMetadata);
-            map.put(entity.getEntityName(), initialData);
-        } else {
-            List<FieldMetadata> existingData = map.get(entity.getEntityName());
-            existingData.add(fieldMetadata);
-            map.put(entity.getEntityName(), existingData);
+            if (!map.containsKey(entity.getTableName())) {
+                List<EntityField> initialData = new ArrayList<>();
+                initialData.add(customFkBuilder.build());
+                map.put(entity.getTableName(), initialData);
+            } else {
+                List<EntityField> existingData = map.get(entity.getTableName());
+                existingData.add(customFkBuilder.build());
+                map.put(entity.getTableName(), existingData);
+            }
         }
     }
 
     // Convert Create Table List to Query
-    private static void convertCreateTableToQuery(QueryTypes type, List<String> addedEntities, List<String> queries,
-            HashMap<String, List<FieldMetadata>> addedReadOnly, HashMap<String, List<FieldMetadata>> addedFields) {
-        String addField = "";
-        String pKField = "";
-        if (Objects.requireNonNull(type) == QueryTypes.ADD_TABLE) {
-            for (String entity : addedEntities) {
-                FieldMetadata primaryKey = addedReadOnly.get(entity).get(0);
-                String addTableTemplate = "CREATE TABLE %s (%n    %s %s PRIMARY KEY";
-
+    private static void addCreateTableQueries(List<String> addedEntities, Module currentModel,
+                                              List<String> queries) {
+        for (String tableName:addedEntities) {
+            Optional<Entity> entity = currentModel.getEntityByTableName(tableName);
+            if (entity.isPresent()) {
                 try {
-                    if (!primaryKey.isArrayType()) {
-                        pKField = SqlScriptUtils.getTypeNonArray(primaryKey.getDataType(),
-                                primaryKey.getSqlType(), PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                    } else {
-                        pKField = SqlScriptUtils.getTypeArray(primaryKey.getDataType(),
-                                PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                    }
+                    queries.add(SqlScriptUtils.generateCreateTableQuery(entity.get(), new HashMap<>(),
+                            PersistToolsConstants.SupportedDataSources.MYSQL_DB) + System.lineSeparator());
                 } catch (BalException e) {
-                    errStream.println("ERROR: data type conversion failed: " + e.getMessage());
-                    return;
+                    errStream.println("ERROR: failed to generate create table query: " + e.getMessage());
                 }
-
-                StringBuilder query = new StringBuilder(
-                        String.format(addTableTemplate, entity, primaryKey.getName(), pKField));
-
-                String addFieldTemplate = ",%n    %s %s";
-
-                if (addedFields.get(entity) != null) {
-                    for (FieldMetadata field : addedFields.get(entity)) {
-                        try {
-                            if (!field.isArrayType()) {
-                                addField = SqlScriptUtils.getTypeNonArray(field.getDataType(), field.getSqlType(),
-                                        PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                            } else {
-                                addField = SqlScriptUtils.getTypeArray(field.getDataType(),
-                                        PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                            }
-                        } catch (BalException e) {
-                            errStream.println("ERROR: data type conversion failed: " + e.getMessage());
-                            return;
-                        }
-
-                        query.append(String.format(addFieldTemplate, field.getName(), addField));
-                    }
-                }
-
-                query.append("\n);\n");
-                queries.add(query.toString());
             }
         }
     }
 
     // Convert list to a MySQL query
-    private static void convertListToQuery(QueryTypes type, List<String> entities, List<String> queries) {
-        if (Objects.requireNonNull(type) == QueryTypes.REMOVE_TABLE) {
-            for (String entity : entities) {
-                String removeTableTemplate = "DROP TABLE %s;%n";
-                queries.add(String.format(removeTableTemplate, entity));
+    private static void addDropTableQueries(List<String> entities, List<String> queries) {
+        for (String entity : entities) {
+            String removeTableTemplate = "DROP TABLE %s;%n";
+            queries.add(String.format(removeTableTemplate, entity));
+        }
+    }
+
+    private static void addDropColumnQueries(Map<String, List<String>> map, List<String> queries) {
+        for (Map.Entry<String, List<String>> entry : map.entrySet()) {
+            String entity = entry.getKey();
+            for (String field : entry.getValue()) {
+                String removeFieldTemplate = "ALTER TABLE %s%nDROP COLUMN %s;%n";
+                queries.add(String.format(removeFieldTemplate, entity, field));
             }
         }
     }
 
-    // Convert map of String lists to a MySQL query
-    private static void convertMapListToQuery(QueryTypes type, Map<String, List<String>> map, List<String> queries) {
-        switch (type) {
-            case REMOVE_FIELD:
-                for (Map.Entry<String, List<String>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    for (String field : entry.getValue()) {
-                        String removeFieldTemplate = "ALTER TABLE %s%nDROP COLUMN %s;%n";
-                        queries.add(String.format(removeFieldTemplate, entity, field));
-                    }
-                }
-                break;
-
-            case REMOVE_READONLY:
-                for (Map.Entry<String, List<String>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    String removeReadOnlyTemplate = "ALTER TABLE %s%nDROP PRIMARY KEY;%n";
-                    queries.add(String.format(removeReadOnlyTemplate, entity));
-                }
-                break;
-
-            case REMOVE_FOREIGN_KEY:
-                for (Map.Entry<String, List<String>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    for (String field : entry.getValue()) {
-                        String[] fieldData = field.split(",");
-                        String foreignKeyName = fieldData[0];
-                        String removeForeignKeyTemplate = "ALTER TABLE %s%nDROP FOREIGN KEY %s;%n";
-                        queries.add(String.format(removeForeignKeyTemplate, entity, foreignKeyName));
-                    }
-                }
-                break;
-
-            default:
-                break;
+    private static void addDropForeignKeyQueries(Map<String, List<ForeignKey>> map, List<String> queries) {
+        for (Map.Entry<String, List<ForeignKey>> entry : map.entrySet()) {
+            String entity = entry.getKey();
+            for (ForeignKey foreignKey : entry.getValue()) {
+                String warningComment = "-- Please verify the foreign key constraint name before executing the query"
+                        + System.lineSeparator();
+                String removeForeignKeyTemplate = warningComment + "ALTER TABLE %s%nDROP FOREIGN KEY %s;%n";
+                queries.add(String.format(removeForeignKeyTemplate, entity, foreignKey.name()));
+                HashMap<String, List<String>> fieldMap = new HashMap<>();
+                fieldMap.put(entity, foreignKey.columnNames());
+                addDropColumnQueries(fieldMap, queries);
+            }
         }
     }
 
     // Convert map of FieldMetadata lists to a MySQL query
-    private static void convertMapToQuery(QueryTypes type, Map<String, List<FieldMetadata>> map, List<String> queries,
-            List<String> addedEntities) {
-        switch (type) {
-            case ADD_FIELD:
-                for (Map.Entry<String, List<FieldMetadata>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    if (!addedEntities.contains(entity)) {
-                        for (FieldMetadata field : entry.getValue()) {
-                            String fieldName = field.getName();
-                            String fieldType = "";
-                            try {
-                                if (!field.isArrayType()) {
-                                    fieldType = SqlScriptUtils.getTypeNonArray(field.getDataType(), field.getSqlType(),
-                                            PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                                } else {
-                                    fieldType = SqlScriptUtils.getTypeArray(field.getDataType(),
-                                            PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                                }
-                            } catch (BalException e) {
-                                errStream.println("ERROR: data type conversion failed: " + e.getMessage());
-                                return;
-                            }
-                            String addFieldTemplate = "ALTER TABLE %s%nADD COLUMN %s %s;%n";
-
-                            queries.add(String.format(addFieldTemplate, entity, fieldName, fieldType));
-                        }
-                    }
+    private static void addModifyColumnTypeQueries(Map<String, List<EntityField>> map, List<String> queries) {
+        for (Map.Entry<String, List<EntityField>> entry : map.entrySet()) {
+            String entity = entry.getKey();
+            for (EntityField field : entry.getValue()) {
+                String fieldName = field.getFieldColumnName();
+                String fieldType;
+                try {
+                    fieldType = SqlScriptUtils.getSqlType(field,
+                            PersistToolsConstants.SupportedDataSources.MYSQL_DB);
+                } catch (BalException e) {
+                    errStream.println("ERROR: data type conversion failed: " + e.getMessage());
+                    return;
                 }
-                break;
+                String changeTypeTemplate = "ALTER TABLE %s%nMODIFY COLUMN %s %s%s%s;%n";
 
-            case CHANGE_TYPE:
-                for (Map.Entry<String, List<FieldMetadata>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    for (FieldMetadata field : entry.getValue()) {
-                        String fieldName = field.getName();
-                        String fieldType = "";
-                        try {
-                            if (!field.isArrayType()) {
-                                fieldType = SqlScriptUtils.getTypeNonArray(field.getDataType(), field.getSqlType(),
-                                        PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                            } else {
-                                fieldType = SqlScriptUtils.getTypeArray(field.getDataType(),
-                                        PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                            }
-                        } catch (BalException e) {
-                            errStream.println("ERROR: data type conversion failed: " + e.getMessage());
-                            return;
-                        }
-                        String changeTypeTemplate = "ALTER TABLE %s%nMODIFY COLUMN %s %s;%n";
-
-                        queries.add(String.format(changeTypeTemplate, entity, fieldName, fieldType));
-                    }
-                }
-                break;
-
-            case ADD_READONLY:
-                for (Map.Entry<String, List<FieldMetadata>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    if (!addedEntities.contains(entity)) {
-                        for (FieldMetadata field : entry.getValue()) {
-                            String primaryKey = field.getName();
-                            String addReadOnlyTemplate = "ALTER TABLE %s%nADD PRIMARY KEY (%s);%n";
-
-                            queries.add(String.format(addReadOnlyTemplate, entity, primaryKey));
-                        }
-                    }
-                }
-                break;
-
-            default:
-                break;
-        }
-    }
-
-    // Convert map of ForeignKey lists to a MySQL query
-    private static void convertFKMapToQuery(QueryTypes type, Map<String, List<ForeignKey>> map, List<String> queries) {
-        if (Objects.requireNonNull(type) == QueryTypes.ADD_FOREIGN_KEY) {
-            for (Map.Entry<String, List<ForeignKey>> entry : map.entrySet()) {
-                String entity = entry.getKey();
-                for (ForeignKey foreignKey : entry.getValue()) {
-
-                    String foreignKeyName = foreignKey.getName();
-                    String childColumnName = foreignKey.getColumnName();
-                    String referenceTableName = foreignKey.getReferenceTable();
-                    String referenceColumnName = foreignKey.getReferenceColumn();
-                    String addFKTemplate = "ALTER TABLE %s%nADD CONSTRAINT %s FOREIGN KEY (%s) REFERENCES %s(%s);%n";
-
-                    queries.add(String.format(addFKTemplate, entity, foreignKeyName, childColumnName,
-                            referenceTableName, referenceColumnName));
-                }
+                queries.add(String.format(changeTypeTemplate, entity, fieldName, fieldType,
+                        field.isOptionalType() ? "" : " NOT NULL",
+                        field.isDbGenerated() ? " AUTO_INCREMENT" : ""));
             }
         }
     }
 
-    // Types of MySQL queries
-    private enum QueryTypes {
-        ADD_TABLE,
-        REMOVE_TABLE,
-        ADD_FIELD,
-        REMOVE_FIELD,
-        CHANGE_TYPE,
-        ADD_READONLY,
-        REMOVE_READONLY,
-        ADD_FOREIGN_KEY,
-        REMOVE_FOREIGN_KEY
+    private static void addCreateFieldQueries(Map<String, List<EntityField>> map, List<String> queries) {
+        for (Map.Entry<String, List<EntityField>> entry : map.entrySet()) {
+            String entity = entry.getKey();
+            for (EntityField field : entry.getValue()) {
+                String fieldName = field.getFieldColumnName();
+                String fieldType;
+                try {
+                    fieldType = SqlScriptUtils.getSqlType(field,
+                            PersistToolsConstants.SupportedDataSources.MYSQL_DB);
+                } catch (BalException e) {
+                    errStream.println("ERROR: data type conversion failed: " + e.getMessage());
+                            return;
+                }
+                String addFieldTemplate = "ALTER TABLE %s%nADD COLUMN %s %s%s%s;%n";
+
+                queries.add(String.format(addFieldTemplate, entity, fieldName, fieldType,
+                        field.isOptionalType() ? "" : " NOT NULL",
+                        field.isDbGenerated() ? " AUTO_INCREMENT" : ""));
+            }
+        }
+    }
+
+    // Convert map of ForeignKey lists to a MySQL query
+    private static void addCreateForeignKeyQueries(Map<String, List<ForeignKey>> map, List<String> queries) {
+        String addFKTemplate = "ALTER TABLE %s%nADD CONSTRAINT %s FOREIGN KEY (%s) REFERENCES %s(%s);%n";
+        for (Map.Entry<String, List<ForeignKey>> entry : map.entrySet()) {
+            String entity = entry.getKey();
+            for (ForeignKey foreignKey : entry.getValue()) {
+                queries.add(String.format(addFKTemplate, entity, foreignKey.name(),
+                        foreignKey.columnNames().stream().reduce((a, b) -> a + ", " + b).orElse(""),
+                        foreignKey.referenceTable(),
+                        foreignKey.referenceColumns().stream().reduce((a, b) -> a + ", " + b).orElse("")));
+            }
+        }
     }
 
     @Override
